Refactor SVG code; Add @font-face comment.

--- a/_assets/stylesheets/_base.type.scss
+++ b/_assets/stylesheets/_base.type.scss
@@ -2,6 +2,9 @@
 // Base typography
 //
 /*
+
+// Can't use personal webfont because github pages doesn't allow for htaccess configuration files.
+
 @font-face {
     font-family: 'Montserrat-Semibold';
     src: url('/static/webfonts/Montserrat-Semibold/Montserrat-Semibold.eot'); // IE9 Compat Modes
