--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,6 +52,7 @@
     <link rel="dns-prefetch" href="//medicine.stonybrookmedicine.edu" />
     <link rel="dns-prefetch" href="//www.amc.edu" />
     -->
+    <link rel="dns-prefetch" href="//api.github.com" />
 
   </head>
   <body>
