Continue testing of dns-prefetch.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,6 +52,10 @@
     <link rel="dns-prefetch" href="//medicine.stonybrookmedicine.edu" />
     <link rel="dns-prefetch" href="//www.amc.edu" />
     -->
+    <link rel="dns-prefetch" href="//fonts.google.apis.com" />
+    <link rel="dns-prefetch" href="//fonts.gstatic.com" />
+    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
+    <link rel="dns-prefetch" href="//www.google-analytics.com" />
     <link rel="dns-prefetch" href="//api.github.com" />
 
   </head>
