Move dns-prefetch to top of html document.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,14 @@
 
     <title>{{ page.title}} - {{ site.name }}</title>
 
+    <!-- dns-prefetch -->
+    <link rel="dns-prefetch" href="//fonts.google.apis.com" />
+    <link rel="dns-prefetch" href="//fonts.gstatic.com" />
+    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
+    <link rel="dns-prefetch" href="//www.google-analytics.com" />
+    <link rel="dns-prefetch" href="//api.github.com" />
+
+
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat|Istok+Web" />
     <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}" />
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
@@ -52,12 +60,7 @@
     <link rel="dns-prefetch" href="//medicine.stonybrookmedicine.edu" />
     <link rel="dns-prefetch" href="//www.amc.edu" />
     -->
-    <link rel="dns-prefetch" href="//fonts.google.apis.com" />
-    <link rel="dns-prefetch" href="//fonts.gstatic.com" />
-    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
-    <link rel="dns-prefetch" href="//www.google-analytics.com" />
-    <link rel="dns-prefetch" href="//api.github.com" />
-
+    
   </head>
   <body>
     <div class="site__wrapper">
