Implement own .no-touch solution; remove Modernizr

--- a/_assets/stylesheets/_components.site-nav.scss
+++ b/_assets/stylesheets/_components.site-nav.scss
@@ -178,7 +178,7 @@
     display: none;
 }
 
-.no-touchevents {
+.no-touch {
 
     .logo--status:hover .logo--highlight,
     .logo--status:active .logo--highlight {
