Replace Blog with Note. Split script to pre-/post-

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,7 +49,7 @@
     <meta name="msapplication-config" content="{{ '/static/images/favicons/browserconfig.xml' | prepend: site.baseurl }}">
     <meta name="theme-color" content="#ffffff">
 
-    <script src="{{ '/js/script.js' | prepend: site.baseurl }}"></script>
+    <script src="{{ '/js/pre-script.js' | prepend: site.baseurl }}"></script>
 
 
     <!-- explicit dns-prefetch (non-anchor tagged) -->
