--- a/_assets/stylesheets/_components.page-body.scss
+++ b/_assets/stylesheets/_components.page-body.scss
@@ -142,3 +142,28 @@
         }
     }
 }
+
+// specific styling to the notes page
+.note {
+    width: 100%;
+    height: 100vh;
+    border: 1px solid black;
+    background: #a5eeff;
+    padding: 1rem;
+
+    &__title {
+
+    }
+
+    &__content {
+        width: 100%;
+        height: 100%;
+        text-align: left;
+        font-size: 1rem;
+        font-family: monospace;
+    }
+
+    &__content:focus {
+        outline: none;
+    }
+}
