--- a/_assets/stylesheets/_components.page-body.scss
+++ b/_assets/stylesheets/_components.page-body.scss
@@ -147,8 +147,7 @@
 .note {
     width: 100%;
     height: 100vh;
-    border: 1px solid black;
-    background: #a5eeff;
+    background: linear-gradient(to bottom, #a5eeff 0%, #fff 100%);
     padding: 1rem;
 
     &__title {
@@ -161,6 +160,7 @@
         text-align: left;
         font-size: 1rem;
         font-family: monospace;
+      //  background-image: 
     }
 
     &__content:focus {
