--- a/_assets/stylesheets/_components.site-nav.scss
+++ b/_assets/stylesheets/_components.site-nav.scss
@@ -95,7 +95,7 @@
                 }
 
                 &:nth-child(2) {
-                    order: 3;
+                    order: 2;
                 }
 
                 &:nth-child(3) {
@@ -103,7 +103,7 @@
                 }
 
                 &:last-child {
-                    order: 2;
+                    order: 3;
                 }
             }
 
@@ -136,6 +136,9 @@
                     order: 3;
                     margin-left: 100px;
                 }
+            }
+            a {
+                padding: 0 0.2em;
             }
         }
     }
