--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
     <!-- dns-prefetch -->
     <link rel="dns-prefetch" href="//fonts.google.apis.com" />
     <link rel="dns-prefetch" href="//fonts.gstatic.com" />
-    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
+    <!--   <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" /> -->
     <link rel="dns-prefetch" href="//www.google-analytics.com" />
     <link rel="dns-prefetch" href="//api.github.com" />
 
