Rename variable for consistency.

--- a/_assets/stylesheets/_components.module.git-message.scss
+++ b/_assets/stylesheets/_components.module.git-message.scss
@@ -48,7 +48,7 @@
     font-size: 0.9rem;
 }
 
-#lastCommitMessage {
+.last-commit-message {
     display: block;
     background-color: #3c4046;
     line-height: 1;
