Add icon links to GitHub, Codepen, and FCC.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,22 @@
   <footer>
     <div class="footer">
+        <div class="link-icons">
+            <a class="icon-links" href="//github.com/timolawl" alt="Tim Chiang's GitHub Page">
+                <svg class="icon icon-github">
+                    <use xlink:href="#icon-github"></use>
+                </svg>
+            </a>
+            <a class="icon-links" href="//codepen.io/timchiang" alt="Tim Chiang's Codepen Page">
+                <svg class="icon icon-codepen">
+                    <use xlink:href="#icon-codepen"></use>
+                </svg>
+            </a>
+            <a class="icon-links" href="//freecodecamp.com/timolawl" alt="Tim Chiang's Free Code Camp Page">
+                <svg class="icon icon-fcc">
+                    <use xlink:href="#icon-fcc"></use>
+                </svg>
+            </a>
+        </div>
         <span class="copyright">&copy; {{ site.time | date: '%Y' }} Tim Chiang, unless otherwise noted.</span>
     </div>
   </footer>
