--- a/_assets/stylesheets/_components.page-foot.scss
+++ b/_assets/stylesheets/_components.page-foot.scss
@@ -3,14 +3,64 @@
 //
 
 .footer {
+    border-top: 1px solid lighten($secondary-light, 35%);
+    padding-top: 1rem;
     text-align: center;
+}
+
+.link-icons {
+  //  display: flex;
+  //  align-items: center;
+   // justify-content: center;
+}
+
+.icon-links {
+ //   color: black;
+    display: inline-block;
+    border-radius: 100%;
+    border: 4px solid $secondary-light;
+    &:link {
+        color: black;
+        background-color: $secondary-light;
+    }
+
+    &:visited {
+        color: black;
+        background-color: $secondary-light;
+    }
+
+    &:hover {
+     //   color: $primary-light;
+        border-color: $primary-light;
+        background-color: $primary-light;
+    }
+
+    &:active {
+    //    color: $primary-light;
+        border-color: $primary-light;
+        background-color: $primary-light;
+    }
+}
+
+.icon {
+    display: block;
+    width: 3em;
+    height: 3em;
+    fill: currentColor;
+ //   fill: #000;
+ //   border: 4px solid $secondary-light;
+ //   border-radius: 100%;
+ //   background-color: $secondary-light;
+}
+
+.icon-github {
+
 }
 
 .copyright {
     width: 80%;
     max-width: 720px;
     display: inline-block;
-    padding-top: 3vmin;
-    border-top: 1px solid lighten($secondary-light, 35%);
+    padding-top: 1rem;
     color: $secondary-light;
 }
