--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,10 @@
     <link rel="dns-prefetch" href="//www.google-analytics.com" />
     <link rel="dns-prefetch" href="//api.github.com" />
 
+    <link rel="dns-prefetch" href="//github.com" />
+    <link rel="dns-prefetch" href="//codepen.io" />
+    <link rel="dns-prefetch" href="//freecodecamp.com" />
+
 
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat|Istok+Web" />
     <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}" />
