Add contact form; resize icons; ∆ header fonts.

--- a/_assets/stylesheets/_components.page-foot.scss
+++ b/_assets/stylesheets/_components.page-foot.scss
@@ -9,13 +9,9 @@
 }
 
 .link-icons {
-  //  display: flex;
-  //  align-items: center;
-   // justify-content: center;
 }
 
 .icon-links {
- //   color: black;
     display: inline-block;
     border-radius: 100%;
     border: 4px solid $secondary-light;
@@ -44,8 +40,8 @@
 
 .icon {
     display: block;
-    width: 3em;
-    height: 3em;
+    width: 2rem;
+    height: 2rem;
     fill: currentColor;
  //   fill: #000;
  //   border: 4px solid $secondary-light;
