--- a/_assets/stylesheets/_generics.resets.scss
+++ b/_assets/stylesheets/_generics.resets.scss
@@ -5,3 +5,16 @@
     position: relative;
     text-decoration: none;
 }
+
+// Forms
+button,
+input,
+optgroup,
+select,
+textarea {
+    color: inherit;
+    font: inherit;
+    margin: 0;
+}
+
+
