--- a/css/main.scss
+++ b/css/main.scss
@@ -26,10 +26,11 @@
 @import "_objects.wrappers";
 
 @import "_components.iconic";
-@import "_components.module.git-message";
 @import "_components.site-nav";
 @import "_components.page-head";
 @import "_components.page-body";
+@import "_components.module.git-message";
+@import "_components.module.contact-form";
 @import "_components.post";
 @import "_components.page-foot";
 
