--- a/_assets/stylesheets/_components.module.contact-form.scss
+++ b/_assets/stylesheets/_components.module.contact-form.scss
@@ -15,6 +15,7 @@
         }
 
         &--button {
+            cursor: pointer;
             font-weight: bold;
       //      color: white;
             text-transform: uppercase;
