Adjust font consistency across pages.

--- a/_assets/stylesheets/_components.page-body.scss
+++ b/_assets/stylesheets/_components.page-body.scss
@@ -19,7 +19,7 @@
 
     &__header {
         text-align: center;
-        margin-bottom: 10px;
+        margin-bottom: 2rem;
     }
 
     &__content {
