--- a/_assets/stylesheets/_components.page-foot.scss
+++ b/_assets/stylesheets/_components.page-foot.scss
@@ -3,6 +3,9 @@
 //
 
 .footer {
+    width: 80%;
+    max-width: 720px;
+    margin: 0 auto;
     border-top: 1px solid lighten($secondary-light, 35%);
     padding-top: 1rem;
     text-align: center;
