--- a/_assets/stylesheets/_components.module.contact-form.scss
+++ b/_assets/stylesheets/_components.module.contact-form.scss
@@ -10,7 +10,7 @@
         padding: 1rem;
 
         &--msg {
-            height: 10rem;
+          //  height: 10rem;
             resize: vertical;
         }
 
