--- a/_assets/stylesheets/_components.module.contact-form.scss
+++ b/_assets/stylesheets/_components.module.contact-form.scss
@@ -20,6 +20,7 @@
       //      color: white;
             text-transform: uppercase;
             background-color: $secondary-light;
+       //     transition: border-color 0.15s ease, background-color 0.15s ease;
             &:hover {
       //          color: black;
                 border-color: $primary-light;
