--- a/_includes/header.html
+++ b/_includes/header.html
@@ -94,6 +94,7 @@
                                 stroke-linejoin:round;
                                 stroke-miterlimit:10}
                         </style>
+                        <a href="/">
                         <path id="XMLID_363_" d="M82 2L62 22 42 2z"/>
                         <path id="XMLID_362_" class="bt0" d="M48 2h-6l20 20v-6z"/>
                         <path id="XMLID_361_" d="M76 2L62 16v6L82 2z"/>
@@ -106,6 +107,7 @@
                         <path id="XMLID_415_" class="bt2" d="M42 2H2l20 20h40z"/>
                         <path id="XMLID_414_" class="bt2" d="M82 2h40l-20 20H62z"/>
                         <path id="XMLID_413_" class="bt2" d="M48 62l14 20 14-20-14-40z"/>
+                        </a>
                     </symbol>
 
                     <symbol id="logo--highlight" viewBox="0 0 124 84">
