--- a/_assets/stylesheets/_base.type.scss
+++ b/_assets/stylesheets/_base.type.scss
@@ -19,8 +19,8 @@
 html {
     font-family: $font-stack-body;
     -webkit-text-size-adjust: none;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  //  -webkit-font-smoothing: antialiased;
+  //  -moz-osx-font-smoothing: grayscale;
     //this actually messed up my spacing in chrome - don't use
   //  text-rendering: optimizeLegibility;
 }
